Fix overflow and alignment of work images

--- a/main.css
+++ b/main.css
@@ -138,12 +138,13 @@ body {
 
 .about {
   background: red;
-  height: 100vh 100%;
+  height: 100% 100vh;
   width: 100%;
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
   align-items: center;
+
 }
  
 /* @media screen and (max-height: 450px) {
@@ -156,10 +157,10 @@ body {
 
 .colums-container {
   display: block;
-  padding: 5%;
+  padding: 15%;
   background: yellow;
   max-width: 80%;
-  height:100%;
+  /* height:100vh; */
 }
 
 /* media queries for column breakdown */
@@ -168,6 +169,7 @@ body {
   .colums-container a {font-size: 20px}
   .colums-container {
     max-width: 100%;
+    padding: 15%;
   }
 }
 
@@ -223,26 +225,26 @@ body {
 
 /* What I do */
 
-/* .whatido-col-middle {
+.whatido-col-middle {
   background: #fff;
   z-index: 3;
-  position: relative; */
+  position: relative;
   /* max-width: 50%; */
   /* padding: 0px;
   margin-left: 60%;
   
-} */
+}
 
 
 .whatido-col-right {
   /* background:red; */
   /* z-index: 0; */
-  /* position: relative;
+  position: relative;
   margin-right: -10%;
   margin-top: -40px;
   height: 40%; 
   width: 70%;
-  padding: 20px; */
+  padding: 20px;
   /* max-width: 30%; */
 }
 
@@ -270,18 +272,10 @@ body {
     
   }
 
-  #trigger img {
-    /* max-width: 30%; */
-  }
-
-.content-lower {
-  overflow: auto;
-  background: red;
-}
 
 .work {
-  height: 100vh;
-
+  height: 100%;
+  min-height: 100vh;
   background: #222;
   display: flex;
   justify-content: space-evenly;
@@ -290,9 +284,8 @@ body {
 }
 
 .work-inner {
-  /* width: 90%; */
-  /* height: 100%; */
-  /* padding-top: 200px; */
+  width: 90%;
+  height: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -301,25 +294,12 @@ body {
 
 /* PROJECTS/PHOTOGRAPHY COLUMNS & IMAGES */
 .projects-col {
-
+  background: red;
 }
 
-
-.container {
-  position: relative;
-  text-align: center;
-  color: white;
-}
- 
-/* Centered text over img */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 2rem;
-  /* opacity: 1; */
-
+.photography-col {
+  background: yellow;
+  /* align-self: flex-end; */
 }
 
 /*  img  */
@@ -331,12 +311,6 @@ body {
   transition-delay: 2s
 }
 
-
-.photography-col {
-
-  align-self: center;
-  margin-top: -10rem;
-}
 
 /*  img  */
 .photography {
